# homelab-trampoline-server

./: default.nix  flake.nix  main.py  pyproject.toml
homelab_trampoline_server/: __init__.py
nix/: sources.json
